--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-primary: 234 108 97;
+    --color-text: 115 115 115;
+    --color-bg: 255 255 255;
+  }
+  :root.dark {
+    --color-primary: 234 108 97;
+    --color-text: 145 151 165;
+    --color-bg: 32 33 36;
+  }
+}
