--- a/src/app.css
+++ b/src/app.css
@@ -14,3 +14,41 @@
     --color-bg: 32 33 36;
   }
 }
+
+@layer utilities {
+  @media (hover: hover) {
+    .scroll-aera {
+      padding-right: 0px !important;
+      overflow-y: scroll;
+      scrollbar-width: thin;
+      scrollbar-color: rgb(var(--color-text) / 75) rgb(var(--color-bg) / 1);
+    }
+    @supports (-moz-appearance: none) {
+      .scroll-aera {
+        overflow-y: auto;
+        padding-right: 8px;
+      }
+    }
+    .scroll-aera::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+    .scroll-aera::-webkit-scrollbar-track {
+      background: rgb(var(--color-bg) / 1);
+    }
+    .scroll-aera::-webkit-scrollbar-thumb {
+      background: transparent;
+      border-radius: 4px;
+      background-clip: padding-box;
+      border: 2px solid transparent;
+    }
+    .scroll-aera:hover::-webkit-scrollbar-thumb {
+      background: rgb(var(--color-text) / 0.5);
+      background-clip: padding-box;
+    }
+    .scroll-aera::-webkit-scrollbar-thumb:hover {
+      background: rgb(var(--color-text) / 0.75);
+      background-clip: padding-box;
+    }
+  }
+}
