--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,8 @@
 @layer base {
   :root {
     --color-primary: 234 108 97;
-    --color-text: 115 115 115;
+    /* --color-text: 115 115 115; */
+    --color-text: 0 0 8;
     --color-bg: 255 255 255;
   }
   :root.dark {
@@ -13,42 +14,56 @@
     --color-text: 145 151 165;
     --color-bg: 32 33 36;
   }
+  :root {
+    -webkit-tap-highlight-color: transparent;
+    overscroll-behavior: none;
+  }
+  a {
+    -webkit-touch-callout: none;
+  }
 }
 
 @layer utilities {
   @media (hover: hover) {
-    .scroll-area {
-      padding-right: 0px !important;
+    .scroll-area-r-3 {
+      padding-right: 0rem !important; /* 0px */
       overflow-y: scroll;
       scrollbar-width: thin;
       scrollbar-color: rgb(var(--color-text) / 75) rgb(var(--color-bg) / 1);
     }
     @supports (-moz-appearance: none) {
-      .scroll-area {
+      .scroll-area-r-3 {
         overflow-y: auto;
-        padding-right: 8px;
+        padding-right: 0.5rem; /* 8px */
       }
     }
-    .scroll-area::-webkit-scrollbar {
-      width: 8px;
-      height: 8px;
+    .scroll-area-r-3::-webkit-scrollbar {
+      width: 0.5rem; /* 8px */
+      height: 0.5rem; /* 8px */
+      background-color: transparent;
     }
-    .scroll-area::-webkit-scrollbar-track {
+    .scroll-area-r-3::-webkit-scrollbar-track {
       background: rgb(var(--color-bg) / 1);
     }
-    .scroll-area::-webkit-scrollbar-thumb {
+    .scroll-area-r-3::-webkit-scrollbar-thumb {
       background: transparent;
-      border-radius: 4px;
+      border-radius: 0.25rem; /* 4px */
       background-clip: padding-box;
-      border: 2px solid transparent;
+      border: 0.125rem solid transparent; /* 2px */
     }
-    .scroll-area:hover::-webkit-scrollbar-thumb {
+    .scroll-area-r-3:hover::-webkit-scrollbar-thumb {
+      background: rgb(var(--color-text) / 0.25);
+      background-clip: padding-box;
+    }
+    .scroll-area-r-3::-webkit-scrollbar-thumb:hover {
       background: rgb(var(--color-text) / 0.5);
       background-clip: padding-box;
     }
-    .scroll-area::-webkit-scrollbar-thumb:hover {
-      background: rgb(var(--color-text) / 0.75);
-      background-clip: padding-box;
-    }
+  }
+}
+
+@media screen and (max-width: 639.9px) {
+  svg.lucide-icon {
+    transform: scale(1.25);
   }
 }
