--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --color-primary: #935050;
-    --color-primary-accent: #3451b2;
+    --color-primary-accent: #935050;
     --color-background: #ffffff;
 
     --color-prose: #282a30;
@@ -26,7 +26,26 @@
     --color-aux-scrollbar-accent: #bbbbbb;
   }
   :root.dark {
-    /* TODO */
+    --color-primary: #bb7171;
+    --color-primary-accent: #c17272;
+    --color-background: #222222;
+
+    --color-prose: #afafaf;
+    --color-prose-weak: #929292;
+    --color-prose-pale: #717171;
+    --color-prose-accent: #c1c1c1;
+
+    --color-roam: #2d2d2db0;
+    --color-roam-primary: #c1727220;
+    --color-roam-weak: #2d2d2d80;
+    --color-roam-accent: #2d2d2d;
+
+    --color-aux-danger: #d91431;
+    --color-aux-danger-accent: #b51029;
+    --color-aux-line: #2d2d2d;
+    --color-aux-tip: #141414;
+    --color-aux-scrollbar: #3a3a3a;
+    --color-aux-scrollbar-accent: #404040;
   }
 
   :root {
