--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,7 @@
     --color-prose-accent: #1b1b1b;
 
     --color-roam: #f1f1f1a0;
+    --color-roam-overlay: #e1e1e190;
     --color-roam-primary: #93505020;
     --color-roam-weak: #f1f1f180;
     --color-roam-accent: #f1f1f1;
