feat: theme toggle; ui tweaks

--- a/src/app.css
+++ b/src/app.css
@@ -2,86 +2,86 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root {
-    --color-primary: #935050;
-    --color-primary-accent: #935050;
-    --color-background: #ffffff;
+:root {
+  --color-primary: #935050;
+  --color-primary-accent: #935050;
+  --color-background: #ffffff;
 
-    --color-prose: #282a30;
-    --color-prose-weak: #3c4149;
-    --color-prose-pale: #979ca2;
-    --color-prose-accent: #1b1b1b;
+  --color-prose: #282a30;
+  --color-prose-weak: #3c4149;
+  --color-prose-pale: #979ca2;
+  --color-prose-accent: #1b1b1b;
 
-    --color-roam: #f1f1f1a0;
-    --color-roam-overlay: #e1e1e190;
-    --color-roam-primary: #93505020;
-    --color-roam-weak: #f1f1f180;
-    --color-roam-accent: #f1f1f1;
+  --color-roam: #f1f1f1a0;
+  --color-roam-overlay: #e1e1e190;
+  --color-roam-primary: #93505020;
+  --color-roam-weak: #f1f1f180;
+  --color-roam-accent: #f1f1f1;
 
-    --color-aux-danger: #d91431;
-    --color-aux-danger-accent: #b51029;
-    --color-aux-line: #f1f1f1;
-    --color-aux-tip: #141414;
-    --color-aux-scrollbar: #bfbfbfbf;
-    --color-aux-scrollbar-accent: #bbbbbb;
-  }
-  :root.dark {
-    --color-primary: #bb7171;
-    --color-primary-accent: #c17272;
-    --color-background: #222222;
+  --color-aux-danger: #d91431;
+  --color-aux-danger-accent: #b51029;
+  --color-aux-line: #f1f1f1;
+  --color-aux-tip: #141414;
+  --color-aux-scrollbar: #bfbfbfbf;
+  --color-aux-scrollbar-accent: #bbbbbb;
+}
 
-    --color-prose: #afafaf;
-    --color-prose-weak: #929292;
-    --color-prose-pale: #717171;
-    --color-prose-accent: #c1c1c1;
+:root.dark {
+  --color-primary: #d98686;
+  --color-primary-accent: #c17272;
+  --color-background: #222222;
 
-    --color-roam: #2d2d2db0;
-    --color-roam-primary: #c1727220;
-    --color-roam-weak: #2d2d2d80;
-    --color-roam-accent: #2d2d2d;
+  --color-prose: #afafaf;
+  --color-prose-weak: #929292;
+  --color-prose-pale: #717171;
+  --color-prose-accent: #c1c1c1;
 
-    --color-aux-danger: #d91431;
-    --color-aux-danger-accent: #b51029;
-    --color-aux-line: #2d2d2d;
-    --color-aux-tip: #141414;
-    --color-aux-scrollbar: #3a3a3a;
-    --color-aux-scrollbar-accent: #404040;
-  }
+  --color-roam: #2d2d2d;
+  --color-roam-overlay: #3d3d3da0;
+  --color-roam-primary: #c1727220;
+  --color-roam-weak: #2d2d2d80;
+  --color-roam-accent: #3d3d3da0;
 
-  :root {
-    -webkit-tap-highlight-color: transparent;
-    overscroll-behavior: none;
-    @apply bg-background;
-  }
+  --color-aux-danger: #d91431;
+  --color-aux-danger-accent: #b51029;
+  --color-aux-line: #2d2d2d;
+  --color-aux-tip: #141414;
+  --color-aux-scrollbar: #3a3a3a;
+  --color-aux-scrollbar-accent: #404040;
+}
 
-  a {
-    -webkit-touch-callout: none;
-  }
+:root {
+  -webkit-tap-highlight-color: transparent;
+  overscroll-behavior: none;
+  @apply bg-background;
+}
 
-  ::-webkit-scrollbar {
-    width: 0.5rem; /* 8px */
-    height: 0.5rem; /* 8px */
-    background-color: transparent;
-  }
-  ::-webkit-scrollbar-track {
-    background: transparent;
-  }
-  ::-webkit-scrollbar-thumb {
-    background: var(--color-aux-scrollbar);
-    background-clip: padding-box;
-    border-radius: 0.25rem; /* 4px */
-    border: 0.125rem solid transparent; /* 2px */
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background: var(--color-aux-scrollbar-accent);
-    background-clip: padding-box;
-  }
-  @supports not selector(::-webkit-scrollbar) {
-    * {
-      scrollbar-width: thin;
-      scrollbar-color: var(--color-aux-scrollbar) transparent;
-    }
+a {
+  -webkit-touch-callout: none;
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem; /* 8px */
+  height: 0.5rem; /* 8px */
+  background-color: transparent;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--color-aux-scrollbar);
+  background-clip: padding-box;
+  border-radius: 0.25rem; /* 4px */
+  border: 0.125rem solid transparent; /* 2px */
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-aux-scrollbar-accent);
+  background-clip: padding-box;
+}
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-aux-scrollbar) transparent;
   }
 }
 
